--- a/uimodule/webapp/i18n/i18n.properties
+++ b/uimodule/webapp/i18n/i18n.properties
@@ -3,9 +3,121 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Title of PM030.APP5
+appTitle=APP5
 
 #YDES: Application description
-appDescription=Description of PM030.APP5
+appDescription=APP5
 #XTIT: Main view title
-title=Title of PM030.APP5
+title=APP5
+
+TitoloGRS=Gestione Registri storici
+
+#FILTERBAR
+DataEsecuzione=Data Esecuzione 
+Divisione=Divisione 
+Index=Index 
+TipoConferma=Tipo Conferma 
+TipoOrdine=Tipo Ordine 
+TipoAttivita=Tipo Attività PM 
+Indisponibilita=Indisponibilità
+Sistema=Sistema
+Classe=Classe
+Impianto=Impianto
+SedeTecnicaComponente=Sede Tecnica Componente
+Componente= Componente
+CentroDiLavoro=Centro di lavoro
+Destinatario=Destinatario
+Percorso=Percorso
+TipoGestione=Tipo Gestione
+Finalita=Finalità
+GrupControllo=Grup.Controllo
+OrdineConsuntivazione= Ordine consuntivazione
+NumOpODM= Numero operazione dell'ODM
+Avviso=Avviso
+PosIntervento=Posizione intervento
+
+AESistema=AE - Sistema
+AEContatore=AE - Contatore
+AEProgressivo=AE - Progressivo
+AEClasse=AE - Classe
+AESedeTecnica=AE - Sede tecnica
+AEEquipment=AE - Equipment
+AEComponenteTipo=AE - Componente Tipo
+AEDescrizioneComponente=AE - Descrizione componente
+AEDescrizioneProgressivo=AE - Descrizione progressivo
+
+#TABELLA
+Index=Index	
+DataEsecuzione=Data esecuzione	
+DataDiScadenzaNaturale=Data di scadenza naturale	
+TipoAttivitaPM=Tipo Attività PM	
+Impianto=Impianto
+DescrizioneComponente=Descrizione Componente
+SedeTecnica=Sede Tecnica	
+Ordine=Ordine	
+OperazioneODM=Operazione ODM	
+LavoroPianificato=Lavoro pianificato
+UMLavoroPianificato=UM Lavoro pianificato	
+LavoroEffettivo=Lavoro effettivo
+UMLavoroEffettivo=UM Lavoro effettivo	
+Avviso=Avviso	
+Divisione=Divisione
+TipoConferma=Tipo conferma	
+TipoOrdine=Tipo Ordine	
+Indisponibilita=Indisponibilità
+Sistema=Sistema
+Classe=Classe
+Frequenza=Frequenza
+UMFrequenza=UM Frequenza
+Equipment=Equipment
+Etichetta=Etichetta
+CentroDiLavoro=Centro di Lavoro
+Destinatario=Destinatario
+Percorso=Percorso
+TipoGestione=Tipo Gestione
+Finalita=Finalità
+GruppoControlli=Gruppo Controlli
+Intervento=Intervento
+DettagliDellaConferma=Dettagli della conferma
+DescrizioneDettagliDelleConferme=Descrizione dettagli delle conferme
+TestoEsteso=Testo esteso
+OperazioneODM1=Operazione ODM 1
+LavoroPianificato1=LavoroPianificato1
+UMLavoroPianificato1=UM Lavoro pianificato 1
+LavoroEffettivo1=Lavoro effettivo 1
+UMLavoroEffettivo1=UM Lavoro effettivo 1
+OperazioneODM2=Operazione ODM 2
+LavoroPianificato2=Lavoro pianificato 2
+UMLavoroPianificato2=UM Lavoro pianificato 2
+LavoroEffettivo2=Lavoro effettivo 2
+UMLavoroEffettivo2=UM Lavoro effettivo 2
+OperazioneODM3=Operazione ODM 3
+LavoroPianificato3=Lavoro pianificato 3
+UMLavoroPianificato3=UM Lavoro pianificato 3
+LavoroEffettivo3=Lavoro effettivo 3
+UMLavoroEffettivo3=UM Lavoro effettivo 3
+OperazioneODM4=Operazione ODM 4
+LavoroPianificato4=Lavoro pianificato 4
+UMLavoroPianificato4=UM Lavoro pianificato 4
+LavoroEffettivo4=Lavoro effettivo 4
+UMLavoroEffettivo4=UM Lavoro effettivo 4
+OperazioneODM5=Operazione ODM 5
+LavoroPianificato5=Lavoro pianificato 5
+UMLavoroPianificato5=UM Lavoro pianificato 5
+LavoroEffettivo5=Lavoro effettivo 5
+UMLavoroEffettivo5=UM Lavoro effettivo 5
+
+#ACTIONS
+CreaN=Crea Nuovo
+VisualM=Visualizza / Modifica
+Review=Review Page
+Indietro=Indietro
+Avanti=Avanti
+Review=Review
+Nodata=No data
+Modifica=Modifica
+Salva=Salva
+Cancella=Cancella
+
+#MESSAGEBOX
+MessageDivisioneObbligatoria= Inserire il campo obbligatorio
